--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -14,6 +14,6 @@ Is
 
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">Code</a>
 
-    <code>Language</code>?
+    <code>the thing I am studying right now</code>?
 
       <a href = "w1.html">--></a>  
