--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -17,3 +17,10 @@ Is
     <code>the thing I am studying right now</code>?
 
       <a href = "w1.html">--></a>  
+Is
+
+ <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">Code</a>
+ 
+  <code>coding</code>?
+  
+    <a href = "w1.html">--></a>  
