--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -66,6 +66,12 @@
   &mdash; <a href = "https://en.wikipedia.org/wiki/Ludwig_Wittgenstein">Ludwig Wittgenstein</a>
 </blockquote>
 
+<blockquote>
+     "Knowledge is Power"
+     "Power corrupts"
+     "Knowledge destroys"
+     &mdash; <a href = "https://github.com/yidohe/yidohe.github.io"> Anonymous</a>
+</blockquote>
 <br><br><hr>
 
 <a href = "w0.html">previous</a> |
