--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -26,7 +26,7 @@
       <li>Ciphers (e.g. <a href = "http://www.simonsingh.net/The_Black_Chamber/caesar.html">Caesar Secret Codes</a>)</li>
       <li>Language Encodings (e.g., <a href = "https://en.wikipedia.org/wiki/ASCII">ASCII</a> and <a href = "http://unicode.org/charts/">Unicode</a>)</li>
       <li>Compressions Schemes (e.g., <a href = "http://www.ams.org/samplings/feature-column/fcarc-image-compression">JPEG image compression</a>)</li>
-      <li>Basketball matching (e.g., <a href = "http://www.jumpstartsports.com/upload/images/Radnor_Basketball/448650-basketball__mario_sports_mix_.png">Game</a></li>
+      <li>Basketball matching (e.g., <a href = "http://www.jumpstartsports.com/upload/images/Radnor_Basketball/448650-basketball__mario_sports_mix_.png">Game)</a></li>
     </ul>
         
     <h3>DECODING LANGUAGE: <a href="https://www.uio.no/studier/emner/hf/ikos/EXFAC03-AAS/h05/larestoff/linguistics/Chapter%201.(H05).pdf">What do we mean by language?</a></h3>
