--- a/workshop1/w4.html
+++ b/workshop1/w4.html
@@ -26,6 +26,8 @@
       <a href = "https://en.wikipedia.org/wiki/Ada_Lovelace"><img src = "https://upload.wikimedia.org/wikipedia/commons/a/a4/Ada_Lovelace_portrait.jpg" alt = "Ada Lovelace" class = "headshot"></a>
       
       <img src = "http://www.jumpstartsports.com/upload/images/Radnor_Basketball/448650-basketball__mario_sports_mix_.png" alt = "hohoho" class = "eadshot"></a>
+ 
+  <iframe width="420" height="315" src="https://www.youtube.com/embed/7ClCn9eCKik" frameborder="0" allowfullscreen></iframe>
   
       "The <a href = "https://www.fourmilab.ch/babbage/sketch.html">Analytical
       Engine</a> has no pretensions whatever to <i>originate</i>
